src/objects/RSS_Feed__c.object
<CustomObject>
    <description>Allows you to define the url and other properties of an RSS feed you would like to allow users to follow</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The active flag indicates whether or not the feed will be read, 
this allows you to switch feeds on or off without deleting records</description>
        <inlineHelpText>The active flag indicates whether or not the feed will be read, 
this allows you to switch feeds on or off without deleting records</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sync__c</fullName>
        <description>The last sync field shows the last date and time a feed post was added to this rss feed.</description>
        <inlineHelpText>The last sync field shows the last date and time a feed post was added to this rss feed.</inlineHelpText>
        <label>Last Sync</label>
        <summarizedField>RSS_Feed_Posts__c.CreatedDate</summarizedField>
        <summaryForeignKey>RSS_Feed_Posts__c.RSS_Feed__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maximum_Posts_to_Read__c</fullName>
        <defaultValue>20</defaultValue>
        <description>The number of posts value determines how many newss items can be read from the rss feed, 
a value of 0 here indicates that ALL posts will be read</description>
        <inlineHelpText>The number of posts value determines how many newss items can be read from the rss feed, 
a value of 0 here indicates that ALL posts will be read</inlineHelpText>
        <label>Maximum Posts to Read</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Posts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Roll up posts flag determines the way in which posts are presented in your chatter feed, rss news items can be posted as individual chatter posts, or if this flag is checked then the rss news items will be posted into a single chatter feed</description>
        <inlineHelpText>The Roll up posts flag determines the way in which posts are presented in your chatter feed, rss news items can be posted as individual chatter posts, or if this flag is checked then the rss news items will be posted into a single chatter feed</inlineHelpText>
        <label>Roll Up Posts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>The url tells the system where to get the rss feed data from</description>
        <inlineHelpText>The url tells the system where to get the rss feed data from</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RSS Feed</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Maximum_Posts_to_Read__c</columns>
        <columns>Roll_Up_Posts__c</columns>
        <columns>Last_Sync__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>RSS Feed</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSS Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>